--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -3,11 +3,15 @@
         <file>main.qml</file>
         <file>MyButton.qml</file>
         <file>TextRect.qml</file>
-        <file>Images/TDlogo.png</file>
         <file>MyLogo.qml</file>
         <file>GameScreen.qml</file>
-        <file>Images/startScreenBackground.jpg</file>
-        <file>Images/homeScreenBackground.png</file>
         <file>SplashScreen.qml</file>
+        <file>Tower.qml</file>
+        <file>../Images/homeScreenBackground.png</file>
+        <file>../Images/startScreenBackground.jpg</file>
+        <file>../Images/TDlogo.png</file>
+        <file>../Images/map1.jpg</file>
+        <file>Enemy.qml</file>
+        <file>Bullet.qml</file>
     </qresource>
 </RCC>
